// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FaultCounter renders a div containing faultCount when props.faultCount is greater than 0 1`] = `
<div
  className="FaultCounter"
>
  Faults: 
  2
</div>
`;

exports[`FaultCounter renders a div containing text "none" when props.faultCount equals 0 1`] = `
<div
  className="FaultCounter"
>
  Faults: 
  none
</div>
`;
